fix: answers for the questionnaire not aligning with radio input when text too long

--- a/static/css/bootstrap-overruler.css
+++ b/static/css/bootstrap-overruler.css
@@ -74,6 +74,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: large;
 }
 
+#quiz-answer {
+	display: flex;
+}
+
 #quiz-results-container {
 	margin-left: 0 !important;
 	margin-right: 0 !important;
